[gd_scene load_steps=12 format=3 uid="uid://c0f5ar0t7ivl5"]

[ext_resource type="PackedScene" uid="uid://dycvjsyhm3obh" path="res://scenes/level/level.tscn" id="1_06pqb"]
[ext_resource type="TileSet" uid="uid://cx7nxglpy1f1v" path="res://scenes/level/base_room_1.tres" id="2_fcddr"]
[ext_resource type="Script" path="res://scenes/level/ending_room.gd" id="2_ohl78"]
[ext_resource type="TileSet" uid="uid://dcx37h30t4dy0" path="res://scenes/level/hub.tres" id="3_q4qer"]
[ext_resource type="PackedScene" uid="uid://lph0jd7j7dgp" path="res://scenes/objects/back_door.tscn" id="4_qwvwg"]
[ext_resource type="PackedScene" uid="uid://fv4t1le7meyh" path="res://scenes/objects/simple_torch.tscn" id="5_uhrrx"]
[ext_resource type="PackedScene" uid="uid://j41s4c5oc3wi" path="res://scenes/objects/side_torch_r.tscn" id="6_ro8u5"]
[ext_resource type="PackedScene" uid="uid://6diqfbed0kqj" path="res://scenes/objects/side_torch_l.tscn" id="7_mjh8o"]
[ext_resource type="Texture2D" uid="uid://dmeorv8o8byrh" path="res://graphics/LightFX/circle.png" id="8_lqses"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ubork"]
size = Vector2(305, 56)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ny6ck"]
size = Vector2(303, 27)

[node name="Ending Room" instance=ExtResource("1_06pqb")]
script = ExtResource("2_ohl78")

[node name="NavigationRegion2D" type="Node2D" parent="Ground" index="0"]

[node name="TileMap" type="TileMap" parent="Ground/NavigationRegion2D" index="0"]
tile_set = ExtResource("2_fcddr")
format = 2
layer_0/name = "Ground"
layer_0/tile_data = PackedInt32Array(0, 196613, 1, 1, 262149, 3, 2, 196613, 2, 22, 131077, 2, 23, 65541, 1, 24, 131077, 2, 25, 131077, 1, 26, 262149, 3, 27, 131077, 2, 65536, 131077, 1, 131072, 65541, 1, 196608, 196613, 1, 262144, 131077, 3, 327680, 196613, 1, 393216, 196613, 2, 458752, 131077, 1, 524288, 131077, 3, 589824, 131077, 3, 655360, 131077, 1, 720896, 131077, 3, 786432, 196613, 1, 851968, 262149, 3, 917504, 131077, 2, 983040, 131077, 1, 1048576, 65541, 2, 1114112, 262149, 3, 1179648, 196613, 2, 1245184, 262149, 2, 65537, 196613, 2, 131073, 131077, 1, 196609, 262149, 1, 262145, 262149, 2, 327681, 196613, 2, 393217, 65541, 3, 458753, 196613, 1, 524289, 65541, 3, 589825, 262149, 1, 655361, 131077, 1, 720897, 131077, 1, 786433, 262149, 2, 851969, 196613, 2, 917505, 65541, 1, 983041, 131077, 1, 1048577, 131077, 2, 1114113, 65541, 1, 1179649, 196613, 2, 1245185, 65541, 2, 65538, 65541, 3, 131074, 262149, 1, 196610, 262149, 2, 262146, 65541, 1, 327682, 196613, 2, 393218, 65541, 1, 458754, 262149, 1, 524290, 196613, 1, 589826, 262149, 2, 655362, 196613, 1, 720898, 131077, 3, 786434, 262149, 1, 851970, 131077, 1, 917506, 262149, 2, 983042, 196613, 2, 1048578, 262149, 2, 1114114, 196613, 2, 1179650, 131077, 3, 1245186, 131077, 3, 65539, 65541, 1, 131075, 131077, 1, 262147, 131077, 1, 327683, 131077, 2, 393219, 65541, 1, 458755, 65541, 2, 524291, 131077, 1, 589827, 262149, 3, 655363, 65541, 2, 720899, 131077, 3, 786435, 196613, 1, 851971, 131077, 1, 917507, 196613, 1, 983043, 131077, 2, 1048579, 65541, 1, 1114115, 262149, 1, 1179651, 65541, 3, 1245187, 196613, 3, 65540, 131077, 1, 262148, 65541, 3, 327684, 131077, 1, 393220, 131077, 3, 458756, 262149, 3, 524292, 196613, 3, 589828, 131077, 2, 655364, 262149, 1, 720900, 262149, 3, 786436, 131077, 2, 851972, 65541, 1, 917508, 262149, 3, 983044, 196613, 1, 1048580, 65541, 65536, 1114116, 262149, 1, 1179652, 65541, 3, 1245188, 196613, 1, 65541, 196613, 2, 262149, 65541, 2, 327685, 196613, 3, 393221, 262149, 1, 458757, 196613, 3, 524293, 131077, 1, 589829, 65541, 2, 655365, 131077, 1, 720901, 65541, 3, 786437, 262149, 3, 851973, 196613, 3, 917509, 196613, 1, 983045, 131077, 1, 1048581, 65541, 65536, 1114117, 131077, 1, 1179653, 262149, 1, 1245189, 131077, 2, 262150, 262149, 3, 327686, 196613, 3, 393222, 262149, 3, 458758, 131077, 1, 524294, 131077, 3, 589830, 262149, 3, 655366, 65541, 3, 720902, 262149, 2, 786438, 65541, 1, 851974, 262149, 1, 917510, 131077, 1, 983046, 65541, 3, 1048582, 65541, 65536, 1114118, 65541, 1, 1179654, 131077, 1, 1245190, 262149, 3, 262151, 65541, 3, 393223, 131077, 3, 458759, 65541, 1, 524295, 131077, 3, 589831, 131077, 2, 655367, 65541, 3, 720903, 196613, 2, 786439, 196613, 3, 851975, 65541, 3, 917511, 131077, 2, 983047, 196613, 1, 1048583, 65541, 65536, 1114119, 131077, 1, 1179655, 131077, 2, 1245191, 196613, 1, 524296, 262149, 2, 589832, 65541, 1, 655368, 131077, 1, 720904, 262149, 1, 786440, 65541, 1, 851976, 262149, 3, 917512, 131077, 3, 983048, 65541, 2, 1048584, 131077, 1, 1114120, 262149, 1, 1179656, 65541, 1, 1245192, 65541, 1, 524297, 262149, 3, 589833, 131077, 1, 655369, 65541, 3, 720905, 65541, 2, 786441, 262149, 2, 851977, 196613, 1, 917513, 196613, 1, 983049, 131077, 2, 1048585, 262149, 2, 1114121, 131077, 1, 1179657, 65541, 2, 1245193, 65541, 3, 524298, 196613, 3, 589834, 65541, 2, 655370, 196613, 2, 720906, 65541, 1, 786442, 196613, 3, 851978, 131077, 3, 917514, 65541, 1, 983050, 262149, 2, 1048586, 196613, 2, 1114122, 196613, 2, 1179658, 65541, 1, 1245194, 65541, 2, 393227, 196613, 1, 458763, 65541, 2, 524299, 65541, 2, 589835, 262149, 2, 655371, 196613, 1, 720907, 262149, 1, 786443, 196613, 3, 851979, 131077, 3, 917515, 262149, 3, 983051, 262149, 1, 1048587, 196613, 2, 1114123, 196613, 3, 1179659, 131077, 1, 1245195, 262149, 2, 458764, 65541, 1, 589836, 262149, 3, 655372, 131077, 1, 720908, 196613, 1, 786444, 196613, 3, 851980, 262149, 3, 917516, 196613, 2, 983052, 196613, 2, 1048588, 262149, 1, 1114124, 196613, 2, 1179660, 65541, 1, 1245196, 196613, 1, 589837, 196613, 1, 655373, 196613, 3, 720909, 65541, 2, 786445, 196613, 2, 851981, 131077, 1, 917517, 65541, 2, 983053, 65541, 1, 1048589, 196613, 3, 1114125, 65541, 1, 1179661, 196613, 1, 1245197, 262149, 2, 655374, 65541, 3, 720910, 262149, 2, 786446, 196613, 2, 851982, 262149, 1, 917518, 131077, 2, 983054, 196613, 3, 1048590, 65541, 2, 1114126, 65541, 2, 1179662, 196613, 1, 1245198, 131077, 3, 655375, 65541, 1, 720911, 262149, 3, 786447, 262149, 1, 851983, 262149, 2, 917519, 262149, 2, 983055, 196613, 2, 1048591, 196613, 1, 1114127, 262149, 3, 1179663, 131077, 1, 1245199, 196613, 1, 655376, 262149, 1, 720912, 131077, 2, 786448, 131077, 2, 851984, 196613, 2, 917520, 262149, 3, 983056, 262149, 2, 1048592, 262149, 2, 1114128, 65541, 1, 1179664, 196613, 1, 1245200, 196613, 3, 524305, 131077, 2, 589841, 196613, 1, 655377, 65541, 1, 720913, 196613, 1, 786449, 65541, 2, 851985, 65541, 3, 917521, 131077, 2, 983057, 196613, 2, 1048593, 131077, 2, 1114129, 196613, 3, 1179665, 65541, 2, 1245201, 65541, 1, 589842, 196613, 2, 655378, 65541, 2, 720914, 131077, 3, 786450, 262149, 1, 851986, 196613, 3, 917522, 131077, 3, 983058, 196613, 2, 1048594, 131077, 1, 1114130, 196613, 2, 1179666, 196613, 3, 1245202, 262149, 1, 524307, 131077, 1, 589843, 262149, 3, 655379, 131077, 3, 720915, 65541, 2, 786451, 262149, 1, 851987, 196613, 3, 917523, 131077, 1, 983059, 65541, 1, 1048595, 65541, 1, 1114131, 196613, 2, 1179667, 65541, 3, 1245203, 131077, 3, 131092, 262149, 1, 196628, 196613, 2, 524308, 196613, 3, 589844, 65541, 2, 655380, 65541, 2, 720916, 196613, 1, 786452, 196613, 2, 851988, 131077, 1, 917524, 262149, 2, 983060, 65541, 2, 1048596, 65541, 65536, 1114132, 131077, 2, 1179668, 65541, 3, 1245204, 262149, 2, 65557, 131077, 1, 131093, 262149, 3, 393237, 262149, 2, 458773, 196613, 2, 524309, 262149, 2, 589845, 196613, 3, 655381, 131077, 1, 720917, 262149, 2, 786453, 65541, 3, 851989, 196613, 1, 917525, 262149, 3, 983061, 262149, 2, 1048597, 65541, 65536, 1114133, 196613, 2, 1179669, 196613, 2, 1245205, 131077, 1, 65558, 262149, 2, 131094, 262149, 2, 393238, 196613, 1, 458774, 262149, 2, 524310, 196613, 2, 589846, 196613, 1, 655382, 262149, 1, 720918, 196613, 1, 786454, 196613, 3, 851990, 196613, 3, 917526, 65541, 1, 983062, 196613, 3, 1048598, 65541, 65536, 1114134, 131077, 3, 1179670, 131077, 3, 1245206, 262149, 2, 65559, 262149, 1, 131095, 262149, 2, 196631, 262149, 3, 262167, 196613, 1, 327703, 131077, 1, 393239, 196613, 2, 458775, 262149, 2, 524311, 196613, 1, 589847, 131077, 3, 655383, 131077, 3, 720919, 65541, 3, 786455, 65541, 3, 851991, 262149, 1, 917527, 65541, 2, 983063, 65541, 2, 1048599, 65541, 65536, 1114135, 131077, 3, 1179671, 196613, 2, 1245207, 262149, 3, 65560, 196613, 2, 131096, 65541, 3, 196632, 196613, 2, 262168, 65541, 1, 327704, 262149, 3, 393240, 65541, 2, 458776, 65541, 1, 524312, 131077, 2, 589848, 262149, 2, 655384, 65541, 1, 720920, 262149, 1, 786456, 131077, 2, 851992, 196613, 1, 917528, 196613, 3, 983064, 65541, 1, 1048600, 196613, 1, 1114136, 65541, 2, 1179672, 131077, 1, 1245208, 196613, 3, 65561, 131077, 3, 131097, 131077, 2, 196633, 65541, 1, 262169, 65541, 3, 327705, 131077, 1, 393241, 131077, 2, 458777, 262149, 1, 524313, 262149, 3, 589849, 262149, 3, 655385, 196613, 2, 720921, 196613, 1, 786457, 65541, 2, 851993, 196613, 2, 917529, 65541, 3, 983065, 196613, 1, 1048601, 196613, 3, 1114137, 65541, 2, 1179673, 65541, 2, 1245209, 65541, 2, 65562, 131077, 1, 131098, 196613, 2, 196634, 131077, 1, 262170, 196613, 1, 327706, 262149, 3, 393242, 196613, 3, 458778, 262149, 3, 524314, 262149, 1, 589850, 262149, 3, 655386, 131077, 2, 720922, 131077, 2, 786458, 65541, 3, 851994, 131077, 3, 917530, 262149, 1, 983066, 262149, 1, 1048602, 65541, 2, 1114138, 131077, 1, 1179674, 131077, 3, 1245210, 131077, 1, 65563, 262149, 2, 131099, 131077, 1, 196635, 131077, 3, 262171, 65541, 3, 327707, 196613, 1, 393243, 131077, 3, 458779, 262149, 2, 524315, 196613, 2, 589851, 65541, 3, 655387, 196613, 1, 720923, 131077, 2, 786459, 65541, 3, 851995, 262149, 2, 917531, 65541, 2, 983067, 196613, 1, 1048603, 131077, 1, 1114139, 65541, 3, 1179675, 196613, 2, 1245211, 262149, 1, 1310733, 524293, 7, 1310734, 524293, 7)
layer_1/name = "Wall"
layer_1/tile_data = PackedInt32Array(-1, 5, 3, 65535, 5, 2, 131071, 5, 0, 196607, 5, 2, 262143, 5, 3, 327679, 5, 1, 393215, 5, 2, 458751, 5, 3, 524287, 5, 2, 589823, 5, 1, 655359, 5, 0, 720895, 5, 0, 786431, 5, 3, 851967, 5, 2, 917503, 5, 2, 983039, 5, 0, 1048575, 5, 3, 1114111, 5, 0, 1179647, 5, 3, 1245183, 5, 1, 1310719, 5, 2, 1376255, 5, 4, 1310720, 65541, 4, 1310721, 262149, 4, 1310722, 262149, 4, 1310723, 65541, 4, 1310724, 262149, 4, 1310725, 262149, 4, 1310726, 65541, 4, 1310727, 262149, 4, 1310728, 262149, 4, 1310729, 65541, 4, 1310730, 262149, 4, 1310731, 196613, 4, 1310732, 196613, 4, 1310735, 131077, 4, 1310736, 196613, 4, 1310737, 65541, 4, 1310738, 262149, 4, 1310739, 65541, 4, 1310740, 262149, 4, 1310741, 65541, 4, 1310742, 262149, 4, 1310743, 196613, 4, 1310744, 65541, 4, 1310745, 131077, 4, 1310746, 262149, 4, 1310747, 262149, 4, 1310748, 327685, 4, -65508, 327685, 2, 28, 327685, 0, 65564, 327685, 1, 131100, 327685, 3, 196636, 327685, 2, 262172, 327685, 3, 327708, 327685, 0, 393244, 327685, 0, 458780, 327685, 2, 524316, 327685, 2, 589852, 327685, 2, 655388, 327685, 1, 720924, 327685, 3, 786460, 327685, 1, 851996, 327685, 2, 917532, 327685, 1, 983068, 327685, 0, 1048604, 327685, 3, 1114140, 327685, 2, 1179676, 327685, 1, 1245212, 327685, 1, -65536, 131077, 0, -65535, 262149, 0, -65534, 65541, 0, -65514, 196613, 0, -65513, 262149, 0, -65512, 65541, 0, -65511, 196613, 0, -65510, 65541, 0, -65509, 65541, 0, 851972, 5, 5, 851973, 65541, 5, 851974, 65541, 5, 851975, 196613, 5, 917508, 327685, 1, 983044, 327685, 2, 917511, 5, 1, 983047, 5, 2, 1048580, 65541, 65536, 1048581, 65541, 65536, 1048582, 65541, 65536, 1048583, 65541, 65536, 917509, 524293, 7, 983045, 524293, 7, 983046, 524293, 7, 917510, 524293, 7, 851988, 5, 5, 917524, 327685, 1, 983060, 327685, 2, 1048596, 65541, 65536, 851989, 65541, 5, 917525, 524293, 7, 983061, 524293, 7, 1048597, 65541, 65536, 851990, 65541, 5, 917526, 524293, 7, 983062, 524293, 7, 1048598, 65541, 65536, 851991, 196613, 5, 917527, 5, 1, 983063, 5, 2, 1048599, 65541, 65536)

[node name="TileMap_grass" type="TileMap" parent="Ground" index="1"]
tile_set = ExtResource("3_q4qer")
format = 2
layer_0/name = "Ground"
layer_0/tile_data = PackedInt32Array(196611, 786432, 1, 131076, 0, 0, 196612, 0, 2, 131077, 65536, 0, 196613, 65536, 2, 196614, 65536, 2, 131078, 393216, 2, 131079, 65536, 1, 65543, 65544, 2, 7, 131080, 2, 6, 393216, 1, 5, 65536, 2, 4, 65536, 2, 3, 0, 2, 65542, 0, 1, 8, 8, 5, 9, 65536, 1, 10, 65536, 1, 11, 65536, 1, 12, 65536, 1, 13, 65536, 1, 14, 8, 1, 15, 65536, 1, 16, 65536, 1, 17, 262152, 4, 18, 65536, 1, 19, 65536, 1, 20, 327680, 1, 21, 131072, 2, -65515, 131072, 1, -65516, 65536, 1, -65517, 65536, 1, -65518, 65536, 1, -65519, 65536, 1, -65520, 65536, 1, -65521, 65536, 1, -65522, 65536, 1, -65523, 131080, 0, -65524, 65536, 1, -65525, 65536, 1, -65526, 65536, 1, -65527, 65536, 1, -65528, 65536, 1, -65529, 8, 1, -65530, 8, 0, -65531, 65536, 1, -65532, 65536, 1, -65533, 0, 1, 65548, 196616, 5, 65547, 65536, 1, 65546, 262152, 2, 65545, 65536, 1, 65544, 65536, 1, 131080, 65536, 1, 196615, 65536, 2, 196616, 393216, 1, 196617, 65536, 1, 131081, 65536, 1, 131082, 8, 0, 131083, 65536, 1, 131084, 196616, 0, 131085, 262152, 2, 65549, 65536, 1, 65550, 65536, 1, 65551, 8, 1, 65552, 196616, 2, 65553, 65536, 1, 65554, 65536, 1, 65555, 327680, 1, 65556, 131072, 2, 327688, 851968, 1, 327689, 131080, 0, 262153, 65544, 2, 262152, 851968, 1, 327687, 786432, 1, 262154, 65536, 1, 196618, 65536, 1, 327690, 327680, 1, 393226, 131072, 1, 393225, 65536, 1, 393224, 851968, 1, 458761, 65536, 2, 458762, 131072, 2, 327691, 65536, 2, 262155, 65536, 1, 196619, 8, 4, 196620, 8, 2, 196621, 65536, 1, 196622, 65544, 5, 196623, 196616, 2, 131087, 65536, 1, 131086, 65536, 1, 131088, 65536, 1, 131089, 65536, 1, 131090, 65536, 1, 196626, 65536, 1, 196627, 131072, 1, 131091, 131072, 1, 262162, 65536, 1, 262163, 327680, 2, 262164, 65536, 0, 262165, 393216, 2, 196629, 0, 0, 196630, 131072, 0, 262166, 131072, 1, 327702, 131072, 2, 327701, 65536, 2, 327700, 327680, 1, 393236, 131072, 1, 393235, 65536, 1, 458771, 65536, 2, 458770, 65536, 2, 524306, 786432, 1, 458769, 65536, 2, 458768, 327680, 1, 524304, 131072, 1, 589840, 131072, 2, 589839, 65536, 2, 589838, 0, 2, 524302, 393216, 1, 524301, 0, 2, 524300, 786432, 1, 458766, 65536, 1, 393230, 65536, 1, 393229, 393216, 1, 327693, 65536, 1, 327692, 393216, 1, 262156, 65536, 1, 393228, 0, 2, 262157, 65536, 1, 262158, 65536, 1, 262159, 65536, 1, 196624, 65536, 1, 196625, 65536, 1, 262160, 65536, 1, 327696, 65544, 2, 327695, 65536, 1, 327694, 65536, 1, 327697, 65536, 1, 327698, 65536, 1, 393233, 65536, 1, 262161, 65536, 1, 393234, 65536, 1, 327699, 65536, 1, 458772, 131072, 2, 393232, 65536, 1, 393231, 65536, 1, 458767, 65544, 2, 524303, 65536, 1, 458765, 0, 1, 458760, 0, 2, 524297, 786432, 1)

[node name="BackDoor" parent="Ground" index="2" instance=ExtResource("4_qwvwg")]
position = Vector2(224, 328)

[node name="SimpleTorch" parent="Ground" index="3" instance=ExtResource("5_uhrrx")]
position = Vector2(96, 266)

[node name="SimpleTorch2" parent="Ground" index="4" instance=ExtResource("5_uhrrx")]
position = Vector2(352, 266)

[node name="SideTorchR" parent="Ground" index="5" instance=ExtResource("6_ro8u5")]
position = Vector2(129, 238)

[node name="SideTorchR2" parent="Ground" index="6" instance=ExtResource("6_ro8u5")]
position = Vector2(385, 238)

[node name="SideTorchL" parent="Ground" index="7" instance=ExtResource("7_mjh8o")]
position = Vector2(63, 240)

[node name="SideTorchL2" parent="Ground" index="8" instance=ExtResource("7_mjh8o")]
position = Vector2(319, 239)

[node name="PointLight2D" type="PointLight2D" parent="Ground" index="9"]
position = Vector2(187, -87)
energy = 1.5
shadow_enabled = true
texture = ExtResource("8_lqses")
metadata/_edit_lock_ = true

[node name="Position2D2" type="Marker2D" parent="Entrance" index="0"]
position = Vector2(230, 329)

[node name="Marker2D" type="Marker2D" parent="Entrance" index="1"]
position = Vector2(216, 329)

[node name="PlayerEntrancePos" type="Marker2D" parent="PositionHelpers" index="0"]
position = Vector2(224, 263)

[node name="CameraHelp" type="Marker2D" parent="PositionHelpers" index="1"]
position = Vector2(-8, 328)

[node name="CameraHelp2" type="Marker2D" parent="PositionHelpers" index="2"]
position = Vector2(454, -15)

[node name="Area2D" type="Area2D" parent="." index="6"]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="0"]
position = Vector2(199.5, 2)
shape = SubResource("RectangleShape2D_ubork")

[node name="Area2D2" type="Area2D" parent="." index="7"]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2" index="0"]
position = Vector2(199.5, -36.5)
shape = SubResource("RectangleShape2D_ny6ck")

[connection signal="player_entered_door" from="Ground/BackDoor" to="." method="_on_back_door_player_entered_door"]
[connection signal="player_near_door" from="Ground/BackDoor" to="." method="_on_back_door_player_near_door"]
[connection signal="player_not_near_door" from="Ground/BackDoor" to="." method="_on_back_door_player_not_near_door"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_area_2d_2_body_entered"]
